// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React bindings change the state directly 1`] = `
<div
  onClick={[Function]}
>
  tony
</div>
`;

exports[`React bindings change the state directly 2`] = `
<div
  onClick={[Function]}
>
  eric
</div>
`;

exports[`React bindings create a scope with a component 1`] = `
<div
  onClick={[Function]}
>
  tony
</div>
`;

exports[`React bindings create a scope with a component 2`] = `
<div
  onClick={[Function]}
>
  tom
</div>
`;

exports[`React bindings listen state change 1`] = `
<div
  onClick={[Function]}
>
  tony
</div>
`;

exports[`React bindings listen state change 2`] = `
<div
  onClick={[Function]}
>
  mary
</div>
`;

exports[`React bindings listen state change and using pipe 1`] = `
<div
  onClick={[Function]}
>
  jerry
</div>
`;

exports[`React bindings listen state change and using pipe 2`] = `
<div
  onClick={[Function]}
>
  jerry
</div>
`;

exports[`React bindings make a component link to multi scopes 1`] = `
<div
  onClick={[Function]}
>
  <span>
    tony
  </span>
  <span>
    jack
  </span>
</div>
`;

exports[`React bindings make a component link to multi scopes 2`] = `
<div
  onClick={[Function]}
>
  <span>
    mary
  </span>
  <span>
    jack
  </span>
</div>
`;

exports[`React bindings make a component link to the scope 1`] = `
<div
  onClick={[Function]}
>
  tony
</div>
`;

exports[`React bindings make a component link to the scope 2`] = `
<div
  onClick={[Function]}
>
  tony
</div>
`;

exports[`React bindings make a component link to the scope 3`] = `
<div
  onClick={[Function]}
>
  tom
</div>
`;

exports[`React bindings make a component link to the scope 4`] = `
<div
  onClick={[Function]}
>
  tom
</div>
`;

exports[`React bindings make a component link to the scope and get two props 1`] = `
<div
  onClick={[Function]}
>
  <span>
    tony
  </span>
  <span>
    
  </span>
</div>
`;

exports[`React bindings make a component link to the scope and get two props 2`] = `
<div
  onClick={[Function]}
>
  <span>
    tony
  </span>
  <span>
    A,B,C
  </span>
</div>
`;
